adding data folder with sources readme

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "url": "git://github.com/thlorenz/modurater.git"
   },
   "homepage": "https://github.com/thlorenz/modurater",
-  "dependencies": {},
+  "dependencies": {
+    "map-stream": "0.0.2",
+    "through": "~2.3.4"
+  },
   "devDependencies": {},
   "keywords": [],
   "author": {
